[tool.poetry]
name = "pythorials"
version = "0.1.0"
description = ""
authors = ["Nikolay Bystritskiy <nikolay.bystritskiy@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
